# gtk-timer

./: .gitignore  README.md  com.github.ashkanarabim.gtktimer.json  meson.build
data/: com.github.ashkanarabim.gtktimer.desktop.in  com.github.ashkanarabim.gtktimer.gschema.xml  com.github.ashkanarabim.gtktimer.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  gtk-timer.gresource.xml  item.ui  item.vala  main.vala  meson.build  new-timer-dialog.ui  new-timer-dialog.vala  row.ui  row.vala  style.css  timer-standalone.ui  timer-standalone.vala  timer.ui  timer.vala  window.ui  window.vala
